--- a/vercel.json
+++ b/vercel.json
@@ -1,17 +1,17 @@
 {
-  "version": 2,
+
   "builds": [
     {
-      "src": "index.js",
-      "use": "@now/node"
+      "src": "server.js",
+      "use": "@vercel/node"
     }
   ],
   "routes": [
     {
-      // Specify which paths will route to a destination using a regex
+
       "src": "/(.*)",
-      // Specify the paths' destination
-      "dest": "index.js"
+
+      "dest": "server.js"
     }
   ]
 }
