--- a/vercel.json
+++ b/vercel.json
@@ -4,14 +4,31 @@
     {
       "src": "server.js",
       "use": "@vercel/node"
+    },
+     {
+      "src": "build/",
+      "use": "@vercel/static"
     }
   ],
   "routes": [
     {
 
+      "src": "/api/v1",
+
+      "dest": "server.js"
+    },
+     {
+
       "src": "/(.*)",
 
       "dest": "server.js"
+    },
+    {
+
+      "src": "/(.*)",
+
+      "dest": "build/"
     }
+    
   ]
 }
